# multi-agents-mcp

./: .gitignore  BACKLOG.md  CHANGELOG.md  CONVERSATION.md  MEMORY.md  README.md  TECHNICAL_AUDIT.md  brainstorming.md  current_working_dir.json  fix_state.py  implementation_plan.md  mcp_config.json  pyproject.toml  state.json  state_test_concurrency.json  state_test_game.json  verify_user_flow.py
.agent/workflows/: start.md
.multi-agent-mcp/: state.json
.multi-agent-mcp/logs/: game_transcript.jsonl
.multi-agent-mcp/memory/: Agent A Mediator.md  Agent B Private Tester.md  Agent C Isolated Tester.md  Agent1.md  AgentA.md  AgentB.md  Alex Senior Dev.md  Alex.md  Anais.md  Anna.md  Atlas DevOps.md  Lisa Tech Writer.md  Marcus Tech Lead.md  Marcus.md  Miller Product Mgr.md  Tom.md  User.md  Veer QA Engineer.md  Vir QA Engineer.md
.multi-agent-mcp/vector_store/: search_index.faiss  search_metadata.json
.streamlit/: config.toml
assets/: start_prompt.md  start_prompt.txt
blueprint/: 1-idea.md
docs/: BACKLOG.md
logs/: game_transcript.jsonl
mamcp-streamlit/: app.py  dashboard.py
src/: config.py
test-todel/: install_agent.sh
tests/: debug_wsl_dims.py  debug_wsl_dpi.py  repro_reload_bug.py  reproduce_impersonation.py  state_test.json  state_test_multi.json  state_test_single.json  test_concurrency_manual.py  test_context_files.py  test_dynamic_login.py  test_enforcement.py  test_game_loop.py  test_orchestration.py  test_privacy_logic.py  test_reset_flow.py  test_strategy_injection.py  test_turn_queue.py  verify_fixes.py  verify_logic.py
(+59 files in other folders)
