[project]
name = "multi-agents-mcp"
version = "0.1.0"
description = "MCP Multi-Agent Orchestrator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "streamlit>=1.40.0",
    "portalocker>=2.0.0",
    "streamlit-autorefresh>=1.0.1",
    "jinja2>=3.1.0",
    "graphviz>=0.20.1",
    "sentence-transformers>=2.2.2",
    "faiss-cpu",
    "watchdog>=3.0.0",
    "mss>=9.0.1",
    "numpy>=1.24.0"
]
